force-app/main/default/objects/Discount__c/fields/Checkout_Session__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Session__c</fullName>
    <label>Checkout Session</label>
    <length>56</length>
    <type>Text</type>
</CustomField>