force-app/main/default/objects/Discount__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Item</label>
    <referenceTo>Invoice_Item__c</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>