force-app/main/default/objects/Discount__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <label>Subscription</label>
    <length>56</length>
    <type>Text</type>
</CustomField>